@@ -1,3 +1,7 @@
+pre-1.5.0
+    Bug Fixes:
+      - fix multiple mismatched wait cursor setting and restoring in MainWindow
+
 Sigil-1.4.2
     Bug Fixes:
       - fix bug in "Add Existing" files when file names would require percent encoding
